[gd_scene load_steps=39 format=2]

[ext_resource path="res://Object/NuruNuru/fish_cat.png" type="Texture" id=1]
[ext_resource path="res://Object/NuruNuru/uv1.png" type="Texture" id=2]
[ext_resource path="res://Object/NuruNuru/Nurunuru.gd" type="Script" id=3]
[ext_resource path="res://Object/NuruNuru/life_bar.gd" type="Script" id=4]
[ext_resource path="res://Object/NuruNuru/493915__damnsatinist__retro-punch.wav" type="AudioStream" id=5]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine.gd" type="Script" id=6]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine_hunting.gd" type="Script" id=7]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine_await.gd" type="Script" id=8]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine_attacking.gd" type="Script" id=9]
[ext_resource path="res://Object/NuruNuru/bullet/Eye.tscn" type="PackedScene" id=10]
[ext_resource path="res://Object/NuruNuru/fish_cat_tail.png" type="Texture" id=11]
[ext_resource path="res://Object/Blue_Snow/pixel.png" type="Texture" id=12]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine_skilling.gd" type="Script" id=13]
[ext_resource path="res://Object/NuruNuru/Nuru_statemachine_skilling_base.gd" type="Script" id=14]
[ext_resource path="res://Object/NuruNuru/148013__earr__angry-cat1.wav" type="AudioStream" id=15]
[ext_resource path="res://Object/NuruNuru/148013__earr__angry-cat2.wav" type="AudioStream" id=16]
[ext_resource path="res://Object/NuruNuru/ff14_level_up.wav" type="AudioStream" id=17]
[ext_resource path="res://Object/NuruNuru/export_ofoct.com.ogg" type="AudioStream" id=18]

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("cat_body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 0.108818, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.976471, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "win"
length = 3.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.23357 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "henshin"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("win")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.17438 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cat_body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -30, 0 ), Vector2( 30, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -15, 0 ), Vector2( 15, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 0.378929, 2.21914, 1 ),
"update": 0,
"values": [ 0.0, 1.4, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("cat_body/cat_tail:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.500225, 0.7 ),
"transitions": PoolRealArray( 1, 0.217638, 32, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 13, 13 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cat_body/cat_tail:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.694311, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, 720.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cat_body/cat_tail:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.691657, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 60.8856, 40.0474 ), Vector2( 0, 40.047 ), Vector2( 0, 40.047 ), Vector2( 60.8856, 40.0474 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cat_body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -120 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("tail")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "stop"
}, {
"args": [ "tail", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("cat_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collision_shape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( -16.667, -0.410805 ), Vector2( -16.667, -50.411 ), Vector2( -16.667, -0.410805 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bullet_collision_shape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cat_body/cat_tail:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cat_body/cat_tail:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0, 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "tail_fan"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 41, 14 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 255, 21 )
states/tail_fan/node = SubResource( 11 )
states/tail_fan/position = Vector2( 139, 116 )
transitions = [ "idle", "run", SubResource( 12 ), "run", "idle", SubResource( 13 ), "idle", "tail_fan", SubResource( 14 ), "tail_fan", "idle", SubResource( 15 ), "run", "tail_fan", SubResource( 16 ), "tail_fan", "run", SubResource( 17 ) ]
start_node = "idle"
graph_offset = Vector2( -148, -96 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="CircleShape2D" id=20]

[node name="Nurunuru" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 3 )

[node name="cat_body" type="Sprite" parent="."]
light_mask = 513
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 1 )

[node name="cat_tail" type="Sprite" parent="cat_body"]
light_mask = 515
position = Vector2( 60.8856, 40.0474 )
rotation = -0.693135
texture = ExtResource( 11 )
offset = Vector2( -64.6667, -35.3333 )

[node name="Bullet_collision_shape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -164.594, -60.1419, -119.617, -59.7815, -120.063, -46.418, -45.2272, -45.9726, -45.2981, -60.5684, 0.0256348, -60.1939, -0.236862, 15.054, 104.68, 15.3617, 104.889, 88.9986, -104.472, 88.9986, -105.126, 59.684, -165.499, 60.4898 )
disabled = true

[node name="Collision_shape" type="CollisionPolygon2D" parent="."]
position = Vector2( -16.667, -4.04665 )
scale = Vector2( 8.2, 9.56 )
polygon = PoolVector2Array( 14.8354, 3.16959, 14.8527, 11.0524, -10.771, 11.0512, -10.8759, 3.33582 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 1 )
anims/win = SubResource( 2 )

[node name="axe" type="AnimationPlayer" parent="."]
anims/axe = SubResource( 3 )

[node name="movement" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/rotate = SubResource( 5 )
anims/run = SubResource( 6 )
anims/tail_fan = SubResource( 7 )

[node name="tail" type="AnimationPlayer" parent="."]
autoplay = "tail"
anims/tail = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../movement")
active = true
parameters/playback = SubResource( 19 )

[node name="life_bar" type="Node2D" parent="."]
position = Vector2( -3.96851, -86.5134 )
scale = Vector2( 1.03487, 0.224556 )
z_index = 4
script = ExtResource( 4 )

[node name="blank_bar" type="Sprite" parent="life_bar"]
self_modulate = Color( 0.0235294, 0.862745, 1, 1 )
position = Vector2( 15.7595, -168.12 )
scale = Vector2( 310.362, 59.6193 )
texture = ExtResource( 12 )

[node name="red_bar" type="Sprite" parent="life_bar"]
modulate = Color( 1, 0.352941, 0.427451, 1 )
position = Vector2( -134.09, -168.56 )
scale = Vector2( 300, 50 )
z_index = 1
texture = ExtResource( 12 )
offset = Vector2( 0.4995, 0.00880623 )

[node name="wounded" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.058
pitch_scale = 1.3
max_distance = 400.0
attenuation = 2.07053

[node name="angry1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 10.0

[node name="angry2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = 15.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -9.07986, 29.361 )
scale = Vector2( -1.50751, 1.52412 )
texture = ExtResource( 2 )
energy = 0.0
range_item_cull_mask = 512

[node name="Nuru_statemachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Nuru_statemachine_await" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Nuru_statemachine_hunting" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Nuru_statemachine_attacking" type="Node" parent="."]
script = ExtResource( 9 )

[node name="attack_timer" type="Timer" parent="Nuru_statemachine_attacking"]

[node name="Nuru_statemachine_skilling" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Nuru_statemachine_skilling_base" type="Node" parent="Nuru_statemachine_skilling"]
script = ExtResource( 14 )

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2( -9.34387, 86.7646 )
scale = Vector2( 24.1208, 10.9039 )
shape = SubResource( 20 )

[node name="Eye" parent="." instance=ExtResource( 10 )]
visible = false
scale = Vector2( 0.4, 0.4 )

[node name="Skill_Container" type="Node2D" parent="."]
position = Vector2( 0, 105 )
scale = Vector2( 3, 3 )
z_index = -1

[node name="Skill_Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -21.204

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -20.0
[connection signal="timeout" from="Nuru_statemachine_attacking/attack_timer" to="Nuru_statemachine_attacking" method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="attack_area" to="Nuru_statemachine_hunting" method="_on_attack_area_body_entered"]
[connection signal="timeout" from="Skill_Timer" to="." method="_on_Skill_Timer_timeout"]
